# quantiz-api

./: .eslintrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  Rocket.toml  package-lock.json  package.json
.api/: v0.api.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
migrations/2020-03-29-133351_create_extension_uuid/: down.sql
migrations/2020-03-29-133433_create_tasks_table/: up.sql
migrations/2020-03-30-140615_insert_test_data/: up.sql
migrations/2020-04-19-101413_create_update_trigger_funtion/: down.sql  up.sql
migrations/2020-04-19-101730_create_table_tasks/: down.sql  up.sql
migrations/2020-04-19-101752_insert_test_tasks/: up.sql
scripts/: db.bash  dev.bash  setup.bash
scripts/.githooks/: commit-msg  pre-commit
src/: main.rs  server.ts
src/db/: mod.rs  operations.rs  schema.rs
src/models/: mod.rs
src/models/task/: mod.rs  priority.rs  task.rs
src/responses/: base.rs  errors.rs  mod.rs
src/routers/tasks/: handlers.rs  mod.rs
src/tests/: mod.rs  tasks.rs
