[package]
name = "quantiz-api"
version = "0.1.0"
authors = ["Quang Phan <contact.quangphan@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
dotenv = "0.15"
dotenv_codegen = "0.15"
rocket = { version = "0.4", feature = [] }
diesel = { version = "1.3", features = ["postgres"] }
diesel_migrations = "1.3"
serde_json = "1.0"