[package]
name = "quantiz-api"
version = "0.1.0"
authors = ["Quang Phan <quang@phanvn.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
dotenv = "0.15"
rocket = { version = "0.4" }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono"] }
diesel_migrations = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
semver = "0.9"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "uuid", "json"]

[dev-dependencies]
parking_lot = { version = "0.1.2", features = ["nightly"] }